Fix test errors

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="container">
         <h1 class="logo">my blog</h1>
         <main class="wrapper">
-          <aside class="sidebar">
+          <aside class="sidebar" aria-label="side-panel">
             <h2 class="section-title">All posts</h2>
             <ul class="list titles">
               <li>
@@ -384,7 +384,7 @@
               </div>
             </article>
           </section>
-          <aside class="sidebar">
+          <aside class="sidebar" aria-label="side-panels">
             <h2 class="section-title">Tags</h2>
             <ul class="list tags">
               <li><a href="#">design</a> <span>(6)</span></li>
