--- a/index.html
+++ b/index.html
@@ -360,6 +360,26 @@
         </main>
       </div>
     </div>
+
+    <script id="template-article-link" type="text/x-handlebars-template">
+      <li><a href="#{{id}}"><span>{{title}}</span></a></li>
+    </script>
+
+    <script id="template-article-tag-link" type="text/x-handlebars-template">
+      <li><a href="#tag-{{tag}}">{{tag}}</a></li>
+    </script>
+
+    <script id="template-article-author-link" type="text/x-handlebars-template">
+      <a href="#author-{{author}}">{{author}}</a>
+    </script>
+
+    <script id="template-tag-cloud-link" type="text/x-handlebars-template">
+      <li>
+        <a href="#tag-{{tag}}" class="{{className}}">{{tag}}</a> ({{count}})
+      </li>
+    </script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
