Add Handlebars for generateAuthors

--- a/index.html
+++ b/index.html
@@ -335,26 +335,6 @@
             </ul>
             <h2 class="section-title">Authors</h2>
             <ul class="list authors">
-              <li>
-                <a href="#author-Kitty Toebean">
-                  <span class="author-name">Kitty Toebean</span>
-                </a>
-              </li>
-              <li>
-                <a href="#author-Theo Tabby">
-                  <span class="author-name">Theo Tabby</span>
-                </a>
-              </li>
-              <li>
-                <a href="#author-George Tuxedo">
-                  <span class="author-name">George Tuxedo</span>
-                </a>
-              </li>
-              <li>
-                <a href="#author-Marion Berry">
-                  <span class="author-name">Marion Berry</span>
-                </a>
-              </li>
             </ul>
           </aside>
         </main>
@@ -378,6 +358,17 @@
         <a href="#tag-{{tag}}" class="{{className}}">{{tag}}</a> ({{count}})
       </li>
     </script>
+
+    <script id="template-author-cloud-link" type="text/x-handlebars-template">
+      {{#each authors}}
+        <li>
+          <a href="#author-{{author}}" class="{{className}}">
+            <span class="author-name">{{author}}</span>
+          </a>
+        </li>
+      {{/each}}
+    </script>
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
     <script src="js/script.js"></script>
